gap fix

--- a/src/App.css
+++ b/src/App.css
@@ -287,7 +287,7 @@ html {
   border-radius: 24px;
 }
 .upcoming-events-list {
-  max-height: min(60vh, 28rem);
+  max-height: min(65vh, 32rem);
   overflow-y: auto;
   font-weight: bold;
   color: gray;
@@ -309,6 +309,7 @@ html {
   align-items: center;
   flex-direction: row;
   padding: 0.5rem 0.75rem 0 0.75rem;
+  gap: 0.25rem;
 }
 
 .upcoming-events-list span {
